# test-webui

./: .gitignore  CMakeLists.txt  README.md
lib/: WebView2Loader.def
src/: api.h  main.cpp
ui/: package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
ui/src/components/: Titlebar.tsx
ui/src/hooks/: useTitlebarControls.ts
ui/src/layouts/: RootLayout.tsx
